# lab2.3

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
controller/: CMakeLists.txt  game_controller.cpp  game_controller.h  game_controller.hpp  game_controller_base.cpp  game_controller_base.hpp  main_controller.cpp  main_controller.h  main_controller.hpp  settings_controller.cpp  settings_controller.h  settings_controller.hpp
libs/adapters/: stackable.hpp
libs/adapters/include/: sequence_stack.hpp  stack.hpp  stackable.hpp
libs/adapters/tests/: stack_test.cpp
model/: CMakeLists.txt  game_model.h  game_model.hpp
qt_forms/: mainwindow.ui
view/: CMakeLists.txt  hanoi_widget.cpp  hanoi_widget.h  hanoi_widget.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui
